# practice-site

./: .env  pyproject.toml
backend/: run.py
backend/app/: alembic.ini  config.py  main.py
backend/app/admin/: crud.py  schemas.py  views.py
backend/app/api_auth/: auth.py  auth2.py  authorisation.py  registration.py  test_auth.py  views.py
backend/app/database/: database.py  db.py
backend/app/migrations/: env.py
backend/app/migrations/versions/: 3a71a719b74b_initial_migration.py  491bcd6e40d0_initial_migration.py
backend/app/models/: admin_model.py  user_demo_model.py  volonteur_model.py
backend/app/routers/: admin_page.py  auth_page.py  auth_router.py  new_page_demo_router.py  register_page.py  volonteur_page.py
backend/app/users/: crud.py  schemas.py  views.py
backend/app/users/admin/: schemas.py
backend/app/users/volonteur/: schemas.py
frontend/css/: main.css  style.css
frontend/js/: auth.js  register.js
frontend/templates/: admin.html  auth_window.html  index.html  register_page.html  volonteur.html
uv/: pyproject.toml
